--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,19 +1,34 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>TestProject</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-    <%= stylesheet_link_tag "tailwind", "data-turbo-track": "reload" %>
+<head>
+  <title>MyPosts</title>
+  <%= csrf_meta_tags %>
+  <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-    <%= stylesheet_pack_tag "application", "data-turbo-track": "reload" %>
-  </head>
+  <%= stylesheet_link_tag "tailwind", "data-turbo-track": "reload" %>
+  <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true, type: "module" %>
+</head>
 
-  <body>
-    <main class="container mx-auto mt-28 px-5 flex">
+<body class="bg-gray-50 text-gray-900">
+  <nav class="bg-gradient-to-r from-indigo-500 to-purple-600 p-4 text-white shadow-lg rounded-b-lg">
+    <div class="container mx-auto flex justify-between items-center">
+      <a href="/" class="text-2xl font-semibold tracking-wide">MyApp</a>
+
+      <div class="space-x-6">
+        <%= link_to "Posts", "/", class: "hover:underline text-lg transition duration-300 hover:text-gray-200" %>
+        <%= link_to "Users", "/", class: "hover:underline text-lg transition duration-300 hover:text-gray-200" %>
+      </div>
+    </div>
+  </nav>
+
+  <main class="container mx-auto p-6">
+    <div class="bg-white shadow-md rounded-lg p-6">
       <%= yield %>
-    </main>
-  </body>
+    </div>
+  </main>
+
+  <footer class="bg-gray-900 text-gray-400 text-center p-4 mt-8 rounded-t-lg">
+    &copy; <%= Time.current.year %> MyPosts. All rights reserved.
+  </footer>
+</body>
 </html>
