add device and cancancan, fix tailwind

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -19,7 +19,7 @@
     </div>
 
     <div class="mt-6">
-      <a href="<%= posts_path %>" class="bg-blue-500 text-white px-4 py-2 rounded-lg shadow hover:bg-blue-600">Back to All Posts</a>
+      <a href="<%= posts_path %>" class="bg-indigo-600 text-white px-4 py-2 rounded-lg shadow hover:bg-indigo-500">Back to All Posts</a>
     </div>
   </div>
 </div>
