--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,16 +15,21 @@
       <a href="/" class="text-2xl font-semibold tracking-wide">MyApp</a>
 
       <div class="space-x-6">
-        <%= link_to "Posts", "/", class: "hover:underline text-lg transition duration-300 hover:text-gray-200" %>
-        <%= link_to "Users", "/", class: "hover:underline text-lg transition duration-300 hover:text-gray-200" %>
+        <% if user_signed_in? %>
+          <%= link_to "Sign out", destroy_user_session_path, method: :delete,
+                class: "hover:underline text-lg transition duration-300 hover:text-gray-200" %>
+        <% else %>
+          <%= link_to "Sign in", new_user_session_path,
+                class: "hover:underline text-lg transition duration-300 hover:text-gray-200" %>
+          <%= link_to "Sign up", new_user_registration_path,
+                class: "hover:underline text-lg transition duration-300 hover:text-gray-200" %>
+        <% end %>
       </div>
     </div>
   </nav>
 
   <main class="container mx-auto p-6">
-    <div class="bg-white shadow-md rounded-lg p-6">
-      <%= yield %>
-    </div>
+    <%= yield %>
   </main>
 
   <footer class="bg-gray-900 text-gray-400 text-center p-4 mt-8 rounded-t-lg">
