--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -8,13 +8,13 @@
         <div class="bg-white p-4 mb-4 shadow rounded-lg">
           <h2 class="text-xl font-semibold text-gray-700"><%= post.title %></h2>
           <p class="text-gray-600 mt-2"><%= post.body.truncate(150) %></p>
-          <a href="<%= post_path(post) %>" class="text-blue-500 hover:underline mt-2 block">Read more</a>
+          <a href="<%= post_path(post) %>" class="text-indigo-600 hover:underline mt-2 block">Read more</a>
         </div>
       <% end %>
     </div>
 
     <div class="mt-6">
-      <a href="<%= new_post_path %>" class="bg-blue-500 text-white px-4 py-2 rounded-lg shadow hover:bg-blue-600">
+      <a href="<%= new_post_path %>" class="bg-indigo-600 text-white px-4 py-2 rounded-lg shadow hover:bg-indigo-500">
         Create New Post
       </a>
     </div>
