add tailwind to each devise views

--- a/app/views/devise/mailer/email_changed.html.erb
+++ b/app/views/devise/mailer/email_changed.html.erb
@@ -1,7 +1,10 @@
-<p>Hello <%= @email %>!</p>
+<div class="bg-white p-6 rounded-lg shadow-lg max-w-md mx-auto">
+  <p class="text-lg font-semibold text-gray-900">Hello <%= @email %>!</p>
 
-<% if @resource.try(:unconfirmed_email?) %>
-  <p>We're contacting you to notify you that your email is being changed to <%= @resource.unconfirmed_email %>.</p>
-<% else %>
-  <p>We're contacting you to notify you that your email has been changed to <%= @resource.email %>.</p>
-<% end %>
+  <% if @resource.try(:unconfirmed_email?) %>
+    <p class="mt-4 text-gray-700">We're contacting you to notify you that your email is being changed to <%= @resource.unconfirmed_email %>.</p>
+  <% else %>
+    <p class="mt-4 text-gray-700">We're contacting you to notify you that your email has been changed to <%= @resource.email %>.</p>
+  <% end %>
+</div>
+
