--- a/app/views/devise/mailer/password_change.html.erb
+++ b/app/views/devise/mailer/password_change.html.erb
@@ -1,3 +1,5 @@
-<p>Hello <%= @resource.email %>!</p>
+<div class="bg-white p-6 rounded-lg shadow-lg max-w-md mx-auto">
+  <p class="text-lg font-semibold text-gray-900">Hello <%= @resource.email %>!</p>
 
-<p>We're contacting you to notify you that your password has been changed.</p>
+  <p class="mt-4 text-gray-700">We're contacting you to notify you that your password has been changed.</p>
+</div>
