--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,5 +1,9 @@
-<p>Welcome <%= @email %>!</p>
+<div class="bg-white p-6 rounded-lg shadow-md max-w-md mx-auto">
+  <p class="text-lg font-semibold text-gray-900">Welcome <%= @email %>!</p>
 
-<p>You can confirm your account email through the link below:</p>
+  <p class="mt-4 text-gray-700">You can confirm your account email through the link below:</p>
 
-<p><%= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token) %></p>
+  <p class="mt-4">
+    <%= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token), class: "inline-block text-indigo-600 font-semibold hover:text-indigo-500" %>
+  </p>
+</div>
