--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,12 @@
-<p>Hello <%= @resource.email %>!</p>
+<div class="bg-white p-6 rounded-lg shadow-lg max-w-md mx-auto">
+  <p class="text-lg font-semibold text-gray-900">Hello <%= @resource.email %>!</p>
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
+  <p class="mt-4 text-gray-700">Someone has requested a link to change your password. You can do this through the link below.</p>
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
+  <p class="mt-4">
+    <%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token), class: "inline-block text-indigo-600 font-semibold hover:text-indigo-500" %>
+  </p>
 
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+  <p class="mt-4 text-gray-700">If you didn't request this, please ignore this email.</p>
+  <p class="mt-2 text-gray-700">Your password won't change until you access the link above and create a new one.</p>
+</div>
