--- a/app/views/devise/shared/_error_messages.html.erb
+++ b/app/views/devise/shared/_error_messages.html.erb
@@ -1,14 +1,14 @@
 <% if resource.errors.any? %>
-  <div id="error_explanation" data-turbo-cache="false">
-    <h2>
+  <div id="error_explanation" data-turbo-cache="false" class="mt-6 p-4 bg-red-100 border border-red-400 text-red-700 rounded-md">
+    <h2 class="text-lg font-semibold">
       <%= I18n.t("errors.messages.not_saved",
         count: resource.errors.count,
         resource: resource.class.model_name.human.downcase)
       %>
     </h2>
-    <ul>
+    <ul class="mt-2 list-disc pl-5 space-y-1">
       <% resource.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+        <li class="text-sm"><%= message %></li>
       <% end %>
     </ul>
   </div>
