--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,4 @@
-<div class="min-h-screen bg-gray-100 p-6">
+<div class="bg-gray-100 p-6">
   <div class="max-w-3xl mx-auto bg-white shadow-lg rounded-lg p-6">
     <h1 class="text-3xl font-bold text-gray-800 mb-4"><%= @post.title %></h1>
     <p class="text-gray-600"><%= @post.body %></p>
