add email confirmation for creating new user

--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,6 +1,10 @@
 <div class="bg-white p-6 rounded-lg shadow-md max-w-md mx-auto">
   <p class="text-lg font-semibold text-gray-900">Welcome <%= @email %>!</p>
 
+  <p class="mt-4 text-gray-700">
+    Thank you for signing up. We're excited to have you on board.
+  </p>
+
   <p class="mt-4 text-gray-700">You can confirm your account email through the link below:</p>
 
   <p class="mt-4">
